objects/kugo2p__KugamonInvoice__c.object
<CustomObject>
    <description>Kugamon - Main object for Invoice details. Contains key data points such as Account Name, Invoice Date, and Balance Due Amount.</description>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Kugamon Invoices</relationshipLabel>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__AccountNumber__c</fullName>
        <formula>kugo2p__Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Account is required. To change the Account, please update this field.</inlineHelpText>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__AddOnlinePaymentDetailsinPDF__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Add Checkout Option to Invoice PDF/Online Template</inlineHelpText>
        <label>Add Checkout to Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__AdditionalAccountDetail__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Additional Account Detail</label>
        <referenceTo>kugo2p__AdditionalAccountDetail__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__AdditionalChargeCreditAmount__c</fullName>
        <label>Additional Charge/Credit Amount</label>
        <summarizedField>kugo2p__KugamonInvoiceAdditionalChargeCredit__c.kugo2p__AdditionalChargeCreditAmount__c</summarizedField>
        <summaryForeignKey>kugo2p__KugamonInvoiceAdditionalChargeCredit__c.kugo2p__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__AdditionalChargeCreditTaxAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Additional Charge/Credit Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__AdditionalChargeCreditVATAmount__c</fullName>
        <label>Additional Charge/Credit VAT/GST Amount</label>
        <summarizedField>kugo2p__KugamonInvoiceAdditionalChargeCredit__c.kugo2p__VATAmount__c</summarizedField>
        <summaryForeignKey>kugo2p__KugamonInvoiceAdditionalChargeCredit__c.kugo2p__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__Age__c</fullName>
        <formula>IF(

OR( kugo2p__InvoiceDueDate__c &gt; Today(), kugo2p__BalanceDueAmount__c &lt;= 0, kugo2p__Status__c = &quot;Cancelled&quot;, ISNULL( kugo2p__InvoiceDueDate__c )),
NULL,
Today() - kugo2p__InvoiceDueDate__c

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__AppliedPaymentAmount__c</fullName>
        <formula>round(kugo2p__InvoiceACCAppliedPaymentAmount__c  + kugo2p__InvoiceLineAppliedPaymentAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applied Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__BalanceDueAmount__c</fullName>
        <formula>round(kugo2p__NetAmount__c - kugo2p__AppliedPaymentAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillToCity__c</fullName>
        <label>Bill To City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillToCountry__c</fullName>
        <label>Bill To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillToName__c</fullName>
        <label>Bill To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillToStateProvince__c</fullName>
        <label>Bill To State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillToStreetLong__c</fullName>
        <description>Longer version of the original BillToStreet__c field</description>
        <label>Bill To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillToZipPostalCode__c</fullName>
        <label>Bill To Zip/Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillingMethod__c</fullName>
        <formula>TEXT( kugo2p__AdditionalAccountDetail__r.kugo2p__BillingMethod__c )</formula>
        <label>Billing Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ContactBilling__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact Billing</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices (Contact Billing)</relationshipLabel>
        <relationshipName>Invoice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__ContactShipping__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact Shipping</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices (Contact Shipping)</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__CustomerPODate__c</fullName>
        <label>Customer PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__CustomerPONumber__c</fullName>
        <label>Customer PO Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateCancelled__c</fullName>
        <description>Date Invoice Cancelled</description>
        <label>Date Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__DatePosted__c</fullName>
        <label>Date Posted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateSent__c</fullName>
        <description>Initial Invoice Date Sent via Email PDF / Email Link function</description>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__DeliveryTerms__c</fullName>
        <label>Delivery Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FOB Destination</fullName>
                </value>
                <value>
                    <fullName>FOB Origin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__InternalRevenueRecognitionDate__c</fullName>
        <label>Revenue Recognition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoiceACCAppliedPaymentAmount__c</fullName>
        <label>Invoice ACC Applied Payment Amount</label>
        <summarizedField>kugo2p__KugamonInvoiceAdditionalChargeCredit__c.kugo2p__AppliedPaymentAmount__c</summarizedField>
        <summaryForeignKey>kugo2p__KugamonInvoiceAdditionalChargeCredit__c.kugo2p__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoiceDate__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Invoice Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoiceDueDate__c</fullName>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoiceLineAppliedPaymentAmount__c</fullName>
        <label>Invoice Line Applied Payment Amount</label>
        <summarizedField>kugo2p__KugamonInvoiceLine__c.kugo2p__AppliedPaymentAmount__c</summarizedField>
        <summaryForeignKey>kugo2p__KugamonInvoiceLine__c.kugo2p__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoiceTextandTerms__c</fullName>
        <label>Invoice Terms &amp; Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__IsPosted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, Order Unrelease Function is Disabled for related Orders</inlineHelpText>
        <label>Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, Manual Email Function is Disabled. Invoice Template displays Restricted message</inlineHelpText>
        <label>Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__LineDiscountAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Line Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__LineNetAmount__c</fullName>
        <formula>round(kugo2p__LineSubtotalAmount__c - kugo2p__LineDiscountAmount__c + kugo2p__LineTaxes__c + kugo2p__LineVATAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__LineSubtotalAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Line Subtotal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__LineTaxes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Line Taxes</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__LineVATAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Line VAT/GST Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__Lines__c</fullName>
        <label>Invoice Line Count</label>
        <summaryForeignKey>kugo2p__KugamonInvoiceLine__c.kugo2p__Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__NetAmount__c</fullName>
        <formula>round(kugo2p__TotalAmount__c + kugo2p__AdditionalChargeCreditAmount__c + kugo2p__TotalTaxAmount__c + kugo2p__TotalVATAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__OnlineApprovalKey__c</fullName>
        <label>Online Invoice Approval Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__OnlinePageStatus__c</fullName>
        <formula>IF(
AND(kugo2p__RecordStatus__c &lt;&gt; &quot;Cancelled&quot;),
(&quot;[&quot; &amp; HYPERLINK( $Setup.kugo2p__Terminal_Settings__c.kugo2p__Sites_URL__c&amp;&quot;/kugo2p__OnlineInvoice?key=&quot; &amp; kugo2p__OnlineApprovalKey__c &amp; &quot;&amp;id=&quot;&amp; Id, &quot;Preview&quot;) &amp; &quot;] &quot; ),
IF(
OR(
kugo2p__RecordStatus__c = &quot;Cancelled&quot;
), 
&quot;Inactive&quot;,
&quot;Expired&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Invoice Page Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Debit/Credit Card</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__PaymentStatus__c</fullName>
        <formula>IF( AND(kugo2p__RecordStatus__c == &quot;Cancelled&quot;, kugo2p__BalanceDueAmount__c == kugo2p__NetAmount__c ), &quot;&quot;, 
IF( 
AND (kugo2p__AppliedPaymentAmount__c == 0, kugo2p__BalanceDueAmount__c &gt;0), &quot;Unpaid&quot;, 
IF( 
kugo2p__BalanceDueAmount__c &lt;= 0.00, &quot;Paid&quot;, 
&quot;Partially Paid&quot; 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__PaymentTerms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due Upon Receipt</fullName>
                </value>
                <value>
                    <fullName>Net 7 Days</fullName>
                </value>
                <value>
                    <fullName>Net 10 Days</fullName>
                </value>
                <value>
                    <fullName>Net 30 Days</fullName>
                </value>
                <value>
                    <fullName>Net 45 Days</fullName>
                </value>
                <value>
                    <fullName>Net 60 Days</fullName>
                </value>
                <value>
                    <fullName>Net 90 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__PrintInvoiceTextandTerms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Invoice Terms &amp; Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__RecordStatus__c</fullName>
        <defaultValue>&quot;Unsent&quot;</defaultValue>
        <label>Record Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order Number is Filled when Kugamon Settings field Prevent Multiple Orders on an Invoice is Checked</description>
        <inlineHelpText>Order Number of this Invoice and is configured by your Administrator in Kugamon Settings</inlineHelpText>
        <label>Order Number</label>
        <referenceTo>kugo2p__SalesOrder__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToCity__c</fullName>
        <label>Ship To City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToCountry__c</fullName>
        <label>Ship To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToName__c</fullName>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToStateProvince__c</fullName>
        <label>Ship To State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToStreetLong__c</fullName>
        <description>A longer version of the original ShipToStreet__c field</description>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToZipPostalCode__c</fullName>
        <label>Ship To Zip/Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Status__c</fullName>
        <formula>IF(kugo2p__RecordStatus__c = &apos;Unsent&apos;,
kugo2p__RecordStatus__c &amp; 
&apos; [&apos; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=updateInvoiceStatus&amp;status=Sent&amp;invId=&apos;&amp;Id, &apos;Submit&apos;, &apos;_self&apos;) &amp; &apos;] &apos; &amp; 
&apos; [&apos; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=updateInvoiceStatus&amp;status=Cancelled&amp;invId=&apos;&amp;Id, &apos;Cancel&apos;, &apos;_self&apos;) &amp; &apos;] &apos; , 
IF(kugo2p__RecordStatus__c = &apos;Sent&apos;,  kugo2p__RecordStatus__c &amp; 
&apos; [&apos; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=updateInvoiceStatus&amp;status=Cancelled&amp;invId=&apos;&amp;Id, &apos;Cancel&apos;, &apos;_self&apos;) &amp; &apos;] &apos; ,
IF(kugo2p__RecordStatus__c = &apos;Cancelled&apos;, &apos;Cancelled&apos;,&apos;&apos;)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__SubtotalAmount__c</fullName>
        <formula>round(kugo2p__TotalAmount__c + kugo2p__AdditionalChargeCreditAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subtotal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__TotalAmount__c</fullName>
        <formula>Round(kugo2p__LineSubtotalAmount__c,2) - Round(kugo2p__LineDiscountAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__TotalTaxAmount__c</fullName>
        <description>kugo2p__LineTaxes__c + kugo2p__AdditionalChargeCreditTaxAmount__c</description>
        <formula>round(kugo2p__LineTaxes__c +  kugo2p__AdditionalChargeCreditTaxAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__TotalVATAmount__c</fullName>
        <formula>round(kugo2p__LineVATAmount__c + kugo2p__AdditionalChargeCreditVATAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total VAT/GST Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>kugo2p__AllInvoices</fullName>
        <columns>NAME</columns>
        <columns>kugo2p__Account__c</columns>
        <columns>kugo2p__ContactBilling__c</columns>
        <columns>kugo2p__InvoiceDate__c</columns>
        <columns>kugo2p__InvoiceDueDate__c</columns>
        <columns>kugo2p__AppliedPaymentAmount__c</columns>
        <columns>kugo2p__BalanceDueAmount__c</columns>
        <columns>kugo2p__RecordStatus__c</columns>
        <columns>kugo2p__PaymentStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>kugo2p__Unsent</fullName>
        <columns>NAME</columns>
        <columns>kugo2p__AccountNumber__c</columns>
        <columns>kugo2p__Account__c</columns>
        <columns>kugo2p__ContactBilling__c</columns>
        <columns>kugo2p__InvoiceDate__c</columns>
        <columns>kugo2p__InvoiceDueDate__c</columns>
        <columns>kugo2p__AppliedPaymentAmount__c</columns>
        <columns>kugo2p__BalanceDueAmount__c</columns>
        <columns>kugo2p__RecordStatus__c</columns>
        <columns>kugo2p__PaymentStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>kugo2p__RecordStatus__c</field>
            <operation>contains</operation>
            <value>Unsent</value>
        </filters>
        <label>Unsent</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{YYMMDD}-{0000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>